src/objects/Service_Order_Header__c.object
<CustomObject>
    <description>Object used to handle service related section on Customer order header</description>
    <fields>
        <fullName>Actual_Invoice_Date_Time__c</fullName>
        <label>Actual Invoice Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Applicable_Tax__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applicable Tax</label>
        <referenceTo>Sales_Tax__c</referenceTo>
        <relationshipLabel>Service Order Headers</relationshipLabel>
        <relationshipName>Service_Order_Headers</relationshipName>
        <type>Lookup</type>
        </fields>
    <fields>
        <fullName>CO_Header__c</fullName>
        <label>CO Header</label>
        <referenceTo>CO_Header__c</referenceTo>
        <relationshipLabel>Service Order Headers</relationshipLabel>
        <relationshipName>Service_Order_Headers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Claimed_Total__c</fullName>
        <formula>IF(ISPICKVAL(Transaction_Type__r.Type__c, &apos;Third-Party&apos;), 
       (Total_With_Tax__c - (IF( ISNULL(Deductible_SO_Payment__c) , 0, 
          Deductible_SO_Payment__r.Total_With_Tax__c))), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Claimed Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deductible_SO_Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deductible SO Payment</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SO_Payment_Role__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Deductible</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SO_Payment_Role__c</referenceTo>
        <relationshipLabel>Service Order Headers</relationshipLabel>
        <relationshipName>Service_Order_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deductible_Invoice_Number__c</fullName>
        <formula>IF(ISBLANK( Deductible_SO_Payment__c ), &apos;N/A&apos;,  
        Deductible_SO_Payment__r.Invoice_Number__r.Invoice_Number__c)</formula>
        <label>Deductible Invoice Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claim__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Claim</label>
        <referenceTo>Claim__c</referenceTo>
        <relationshipLabel>Service Order Headers</relationshipLabel>
        <relationshipName>Service_Order_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Claim_Clearing__c</fullName>
        <formula>IF(ISBLANK(Deductible_SO_Payment__r.Invoice_Number__c) || !ISBLANK( Invoice_Number__c) , 0, -(Deductible_SO_Payment__r.Pre_Tax_Total__c))</formula>
        <label>Claim Clearing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Claim_Invoice_Number__c</fullName>
        <formula>IF(( ISPICKVAL(Transaction_Type__r.Type__c, &apos;Third-Party&apos;) &amp;&amp; !ISNULL(Invoice_Number__c)),  Invoice_Number__r.AutoNumberHolder__r.Name, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Claim Invoice Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commit_Order_Controls__c</fullName>
        <label>Commit Order Controls</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Commit and order</fullName>
                    <default>true</default>
                    <label>Commit and order</label>
                </value>
                <value>
                    <fullName>Commit only</fullName>
                </value>
                <value>
                    <fullName>Uncommitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Category</label>
        <referenceTo>Category__c</referenceTo>
        <relationshipLabel>Service Order Headers</relationshipLabel>
        <relationshipName>Service_Order_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cause__c</fullName>
        <label>Cause</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Claim_Status__c</fullName>
        <label>Claim Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unsubmitted</fullName>
                </value>
                <value>
                    <fullName>Ready to Submit</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Claim_Submitted_At__c</fullName>
        <label>Claim Submitted At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Concern__c</fullName>
        <label>Concern</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Correction__c</fullName>
        <label>Correction</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <formula>DATEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreatedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Owned_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Owned Unit</label>
        <referenceTo>Customer_Owned_Unit__c</referenceTo>
        <relationshipLabel>Service Order Headers</relationshipLabel>
        <relationshipName>Service_Order_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deal_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Deal Item</description>
        <label>Deal Item</label>
        <referenceTo>Deal_Item__c</referenceTo>
        <relationshipLabel>Service Order Headers</relationshipLabel>
        <relationshipName>Service_Order_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to deal</description>
        <label>Deal</label>
        <referenceTo>Deal__c</referenceTo>
        <relationshipLabel>Service Order Headers</relationshipLabel>
        <relationshipName>Service_Order_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Estimated_Hours__c</fullName>
        <label>Estimated Hours</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fees_Bulk_Discount_Percent__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Fees Bulk Discount Percent</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>    
    <fields>
        <fullName>Hrs_Billed__c</fullName>
        <label>Hrs Billed</label>
        <summarizedField>Technician_Hour__c.Total_Hours__c</summarizedField>
        <summaryForeignKey>Technician_Hour__c.Service_Order_Header__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Hrs_Logged__c</fullName>
        <label>Hrs Logged</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Number</label>
        <referenceTo>CO_Invoice_Header__c</referenceTo>
        <relationshipLabel>Service Order Headers</relationshipLabel>
        <relationshipName>Service_Order_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Override_Tax__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Override Tax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPromisedBy_AmPm__c</fullName>
        <label>IsPromisedBy AmPm</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Tax_Based_On_Customer_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Tax Based On Customer Address</label>
        <type>Checkbox</type>
    </fields>
	<fields>
        <fullName>Is_Technician_Hours_Costing_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Technician Hours Costing Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Unresolved_Fulfillment_Exists__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Unresolved Fulfillment Exists</description>
        <label>Is Unresolved Fulfillment Exists</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Uploaded_to_Honda__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Uploaded to Honda</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Type__c</fullName>
        <formula>IF((ISPICKVAL(Transaction_Type__r.Type__c, &apos;Internal&apos;) || ISPICKVAL(Transaction_Type__r.Type__c, &apos;Stock Unit&apos;)), &apos;Internal&apos;, 
  IF(ISPICKVAL(Transaction_Type__r.Type__c, &apos;Deal Service&apos;), &apos;Deal&apos;, 
    IF(ISPICKVAL(Transaction_Type__r.Type__c, &apos;Deal Service&apos;), &apos;Deal&apos;, 
      Transaction_Type__r.Code_Label__c
    )
  )
)</formula>
        <label>Job Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Labor_Bulk_Discount_Percent__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Labor Bulk Discount Percent</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Labour_Tax__c</fullName>
        <label>Labour Tax</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <formula>DATEVALUE(LastModifiedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LastModifiedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Order_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Unique name field</description>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes_For_Customer__c</fullName>
        <label>Notes For Customer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Odometer_on_Arrival__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Odometer on Arrival</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Odometer_on_Departure__c</fullName>
        <label>Odometer on Departure</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Override_Tax_Applicable_On__c</fullName>
        <label>Override Tax Applicable On</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Parts</fullName>
                </value>
                <value>
                    <fullName>Labor</fullName>
                </value>
                <value>
                    <fullName>Sublet</fullName>
                </value>
                <value>
                    <fullName>Fees</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parts_Bulk_Discount_Percent__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Parts Bulk Discount Percent</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Promised_By__c</fullName>
        <label>Promised By</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Provider_Discount_Markup__c</fullName>
        <label>Provider Discount-Markup</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Provider_Labour_Rate__c</fullName>
        <label>Provider Labour Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Provider_Part_Price_Base__c</fullName>
        <label>Provider Part Price Base</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Claims_for_Service_Work__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Service Order Headers</relationshipLabel>
        <relationshipName>Service_Order_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Salesperson_Names__c</fullName>
        <label>Salesperson Names</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Cause__c</fullName>
        <label>SO Cause</label>
        <length>2050</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SO_Concern__c</fullName>
        <label>SO Concern</label>
        <length>2050</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SO_Correction__c</fullName>
        <label>SO Correction</label>
        <length>2050</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SO_Notes_For_Customer__c</fullName>
        <label>SO Notes For Customer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SO_Status__c</fullName>
        <formula>SO_Status_Ref__r.Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SO Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Status_Ref__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SO Status Ref</label>
        <referenceTo>SO_Status__c</referenceTo>
        <relationshipLabel>Service Order Headers (SO Status Ref)</relationshipLabel>
        <relationshipName>Service_Order_Headers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SO_Notes__c</fullName>
        <label>SO Notes</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SO_Type__c</fullName>
        <description>Customer order types</description>
        <label>SO Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Cash Sale</fullName>
                </value>
                <value>
                    <fullName>Internal Service</fullName>
                </value>
                <value>
                    <fullName>Deal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scheduled_Date__c</fullName>
        <label>Scheduled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Search_Tag__c</fullName>
        <label>Search Tag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Order_Status__c</fullName>
        <label>Special Order Status</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Need to order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All in-stock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fulfilled</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Special_Order_Status_Formula__c</fullName>
        <formula>IF(ISPICKVAL(CO_Header__r.Order_status__c, &apos;Quote&apos;), &apos;&apos;, IF(ISNULL(TEXT(Special_Order_Status__c)), &apos;None&apos;, TEXT(Special_Order_Status__c)))</formula>
        <label>Special Order Status Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Status_Priority_Number__c</fullName>
        <formula>if( ISPICKVAL(Special_Order_Status__c, &apos;All in-stock&apos;), 1, 
	if( ISPICKVAL(Special_Order_Status__c, &apos;Need to order&apos;), 2, 
		if( ISPICKVAL(Special_Order_Status__c, &apos;Order submitted&apos;), 3, 
			if( ISPICKVAL(Special_Order_Status__c, &apos;None&apos;), 4, 
				if( ISPICKVAL(Special_Order_Status__c, &apos;Fulfilled&apos;), 5, 6)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SO Status Priority Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Ready</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Reviewed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stock__c</fullName>
        <label>Stock</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sublet_Bulk_Discount_Percent__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sublet Bulk Discount Percent</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>    
    <fields>
        <fullName>Tax_Amount__c</fullName>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Technician_Name__c</fullName>
        <label>Technician Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technicians_Name__c</fullName>
        <label>Technicians Name</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Due_In_DateTime__c</fullName>
        <label>Due In DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Due_In_Time__c</fullName>
        <label>Due In Time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promised_By_DateTime__c</fullName>
        <label>Promised By DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Promised_By_Time__c</fullName>
        <label>Promised By Time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Tax_Fees_Total__c</fullName>
        <label>Pre Tax Fees Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pre_Tax_Labor_Total__c</fullName>
        <label>Pre Tax Labor Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pre_Tax_Parts_Total__c</fullName>
        <label>Pre Tax Parts Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pre_Tax_Shop_Supplies_Total__c</fullName>
        <label>Pre Tax Shop Supplies Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pre_Tax_Sublet_Total__c</fullName>
        <label>Pre Tax Sublet Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pre_Tax_Total_Fee_With_Shop_Supplies__c</fullName>
        <formula>Pre_Tax_Shop_Supplies_Total__c +  Pre_Tax_Fees_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pre Tax Total Fee With Shop Supplies</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>    
    <fields>
        <fullName>Total_Discount__c</fullName>
        <label>Total Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Fee_Cost__c</fullName>
        <description>Total fee cost - Populated after Service Job Finalize</description>
        <label>Total Fee Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Fee_With_Shop_Supplies__c</fullName>
        <formula>Total_Fees__c + Total_Shop_Supplies__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Fee With Shop Supplies</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
	<fields>
		<fullName>Internal_Repair_Order_Total__c</fullName>
		<formula>IF(  OR(ISPICKVAL(Transaction_Type__r.Type__c, &apos;Internal&apos;),ISPICKVAL(Transaction_Type__r.Type__c, &apos;Stock Unit&apos;)) ,  Total__c , 0)</formula>
		<formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
		<label>Internal Repair Order Total</label>
		<precision>18</precision>
		<scale>2</scale>
		<type>Currency</type>
    </fields>
	<fields>
		<fullName>Warranty_Repair_Order_Total__c</fullName>
		<formula>IF( ISPICKVAL(Transaction_Type__r.Type__c, &apos;Third-Party&apos;) ,  Total__c , 0)</formula>
		<formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
		<label>Warranty Repair Order Total</label>
		<precision>18</precision>
		<scale>2</scale>
		<type>Currency</type>
    </fields>
	<fields>
		<fullName>Customer_Pay_Repair_Order_Total__c</fullName>
		<formula>IF( ISPICKVAL(Transaction_Type__r.Type__c, &apos;Customer&apos;) ,  Total__c , 0)</formula>
		<formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
		<label>Customer Pay Repair Order Total</label>
		<precision>18</precision>
		<scale>2</scale>
		<type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Fees__c</fullName>
        <label>Total Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Hours_Billed__c</fullName>
        <label>Total Hours Billed</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Labor__c</fullName>
        <label>Total Labor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Labour_Cost__c</fullName>
        <description>Total Labour cost - Populated after Service Job Finalize</description>
        <label>Total Labour Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Parts__c</fullName>
        <label>Total Parts</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Related_Sublet_Cost__c</fullName>
        <description>Total sublet cost - Populated after Service Job Finalize</description>
        <label>Total Related Sublet Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Shop_Supplies_Cost__c</fullName>
        <description>Total Shop Supplies cost - Populated after Service Job Finalize</description>
        <label>Total Shop Supplies Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Shop_Supplies__c</fullName>
        <label>Total Shop Supplies</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Sublet__c</fullName>
        <label>Total Sublet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Tax__c</fullName>
        <label>Total Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_With_Tax__c</fullName>
        <formula>IF( $Setup.Configurations__c.Tax_Included_Pricing__c , Total__c , (Total__c +  Total_Tax__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total With Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction Type</label>
        <referenceTo>Transaction_Type__c</referenceTo>
        <relationshipLabel>Service Order Headers</relationshipLabel>
        <relationshipName>Service_Order_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unit_Arrived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unit Arrived</label>
        <type>Checkbox</type>
    </fields>  
    <fields>
        <fullName>Unit_Location__c</fullName>
        <description>This field is use to hold the location of the unit on the store property</description>
        <label>Unit Location</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Status__c</fullName>
        <label>Work Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New job</fullName>
                </value>
                <value>
                    <fullName>Estimate</fullName>
                </value>
                <value>
                    <fullName>Triage required</fullName>
                </value>
                <value>
                    <fullName>Triage done</fullName>
                </value>
                <value>
                    <fullName>Customer to ok</fullName>
                </value>
                <value>
                    <fullName>Customer approved</fullName>
                </value>
                <value>
                    <fullName>Ready to start</fullName>
                </value>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Wait for parts</fullName>
                </value>
                <value>
                    <fullName>PartMgr review</fullName>
                </value>
                <value>
                    <fullName>ServMgr review</fullName>
                </value>
                <value>
                    <fullName>Job complete</fullName>
                </value>
                <value>
                    <fullName>Ready to invoice</fullName>
                </value>
                <value>
                    <fullName>Invoiced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Service Order Header</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SO-{00000000}</displayFormat>
        <label>Service Order Header Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Order Headers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>